# from-zero-to-but-stop-why-from-zero

./: README.md
assembler/: CMakeLists.txt  main.s  print_array.s  run.sh
b/: array.b
cobol/: arraydemo.cob  run.sh
fortran/: CMakeLists.txt  array_demo.f  run.sh
